--- a/CSS.html/iflow.html
+++ b/CSS.html/iflow.html
@@ -22,12 +22,12 @@
             width: 100px;
             height: 50px;
             color: black;
-            background-color: yellowgreen;
+            background-color: orange;
             line-height: 50px;
             text-align: center;
             }
             .menu ul li:hover{
-                background-color: orange;
+                background-color: red;
                 color: black;
             }
 
